<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.observation_preparation.ObservationPreparationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/ConstraintLayoutDataRequest">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/appBarLayout3">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.AppBarLayout>

        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerAnalysisStrategy"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout3"
                android:layout_marginTop="32dp"/>

        <Button
                android:text="@string/getDataAnalysis"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/buttonGetDataAnalysis"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/buttonDataRequestCancel"
                app:layout_constraintTop_toTopOf="@+id/buttonDataRequestCancel"
                app:layout_constraintBottom_toBottomOf="@+id/buttonDataRequestCancel"/>

        <Button
                android:text="@string/deleteInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDataRequestCancel"
                app:layout_constraintEnd_toStartOf="@+id/buttonGetDataAnalysis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.462"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextViewDataRequestDate"
                android:layout_marginTop="32dp"/>

        <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/Rater"
                android:ems="10"
                android:id="@+id/editTextDataRequestRater"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerAnalysisStrategy"
                android:layout_marginTop="32dp"
                android:completionThreshold="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"/>

        <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/worker"
                android:ems="10"
                android:id="@+id/editTextWorkerDataRequest"
                app:layout_constraintEnd_toEndOf="@+id/editTextDataRequestRater"
                app:layout_constraintStart_toStartOf="@+id/editTextDataRequestRater"
                app:layout_constraintTop_toBottomOf="@+id/editTextDataRequestRater"
                android:layout_marginTop="16dp"
                android:completionThreshold="1"/>

        <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextDataRequestWorkplace"
                app:layout_constraintEnd_toEndOf="@+id/editTextWorkerDataRequest"
                app:layout_constraintStart_toStartOf="@+id/editTextWorkerDataRequest"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextWorkerDataRequest"
                android:hint="@string/workplace"
                android:completionThreshold="1"/>

        <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/autoCompleteTextViewDataRequestDate"
                app:layout_constraintEnd_toEndOf="@+id/editTextDataRequestWorkplace"
                app:layout_constraintStart_toStartOf="@+id/editTextDataRequestWorkplace"
                app:layout_constraintTop_toBottomOf="@+id/editTextDataRequestWorkplace"
                android:layout_marginTop="16dp"
                android:imeOptions="actionSearch"
                android:inputType="textAutoComplete|textAutoCorrect"
                android:hint="@string/Date"
                android:completionThreshold="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
