<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.observation.ObservationChooseFragment">

    <ImageButton
            android:src="@drawable/ic_back_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonLeg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonArm"/>

    <ImageButton
            android:src="@drawable/ic_back_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonArm"
            app:layout_constraintStart_toEndOf="@+id/imageButtonLeg"
            app:layout_constraintTop_toTopOf="@+id/imageButtonLeg"
            app:layout_constraintBottom_toBottomOf="@+id/imageButtonLeg"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <ImageButton
            android:src="@drawable/ic_back_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonBack"
            app:layout_constraintStart_toStartOf="@+id/imageButtonLeg"
            app:layout_constraintEnd_toEndOf="@+id/imageButtonLeg"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <ImageButton
            android:src="@drawable/ic_back_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonUseOfForce"
            app:layout_constraintStart_toStartOf="@+id/imageButtonArm"
            app:layout_constraintEnd_toEndOf="@+id/imageButtonArm"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/imageButtonBack"
            app:layout_constraintStart_toStartOf="@+id/imageButtonBack"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonBack"
            android:text="@string/backPosture"/>

    <TextView
            android:text="@string/useOfForce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/imageButtonUseOfForce"
            app:layout_constraintStart_toStartOf="@+id/imageButtonUseOfForce"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonUseOfForce"/>

    <TextView
            android:text="@string/legPosture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/imageButtonLeg"
            app:layout_constraintStart_toStartOf="@+id/imageButtonLeg"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonLeg"/>

    <TextView
            android:text="@string/armPosture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/imageButtonArm"
            app:layout_constraintStart_toStartOf="@+id/imageButtonArm"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonArm"/>
</androidx.constraintlayout.widget.ConstraintLayout>