<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/appBarLayout3">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <Button
            android:text="@string/Beobachtung"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonObservation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonDataAnalysis"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            android:layout_marginTop="32dp"/>

    <Button
            android:text="@string/Daten_Analyse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDataAnalysis"
            app:layout_constraintTop_toBottomOf="@+id/buttonObservation"
            app:layout_constraintEnd_toEndOf="@+id/buttonObservation"
            app:layout_constraintStart_toStartOf="@+id/buttonObservation"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp"
            />

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:src="@tools:sample/avatars"
            android:id="@+id/imageViewLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout3"
            android:layout_marginTop="16dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.38"/>

    <Button
            android:text="@string/menu_instruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonInstruction"
            app:layout_constraintEnd_toEndOf="@+id/buttonDataAnalysis"
            app:layout_constraintStart_toStartOf="@+id/buttonDataAnalysis"
            app:layout_constraintTop_toBottomOf="@+id/buttonDataAnalysis"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>